force-app/main/default/objects/Live_Person_Agent_Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Assign_Time__c</fullName>
        <description>Time interaction was assigned to agent</description>
        <label>Agent Assign Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agent_Handling_Duration__c</fullName>
        <description>Duration in minutes of interaction</description>
        <inlineHelpText>Duration in minutes of interaction</inlineHelpText>
        <label>Agent Handling Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Last_Message_Time__c</fullName>
        <description>Time of agent&apos;s last message</description>
        <label>Agent Last Message Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that is the agent of this interaction</description>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Live_Person_Agent_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chat_Transcript__c</fullName>
        <description>Transcript record of the interaction</description>
        <label>Chat Transcript</label>
        <referenceTo>Live_Person_Chat_Transcript__c</referenceTo>
        <relationshipLabel>Agent Interactions</relationshipLabel>
        <relationshipName>Agent_Interactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Live Person Agent Interaction</label>
    <nameField>
        <displayFormat>LPAI-{0000}</displayFormat>
        <label>Live Person Agent Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Live Person Agent Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>